--- a/config.toml
+++ b/config.toml
@@ -185,13 +185,13 @@ uglyURLs = false
     [[menu.main]]
         url = "/life/"
         name = "生活"
-        weight = 2
+        weight = 1
         pre = "internal"
         # post = "archive"
     [[menu.main]]
         url = "/cs/"
         name = "计算机科学"
-        weight = 3
+        weight = 2
         pre = "internal"
         # post = "th"
 #    [[menu.main]]
@@ -203,14 +203,14 @@ uglyURLs = false
     [[menu.main]]
         url = "/about/"
         name = "关于"
-        weight = 4
+        weight = 3
         pre = "internal"
         # post = "user-circle"
     [[menu.main]]
-        weight = 6
+        weight = 4
         identifier = "theme-switcher"
     [[menu.main]]
-        weight = 7
+        weight = 5
         identifier = "lang-switcher"
     # [[menu.main]]
     #     weight = 8
@@ -878,7 +878,7 @@ uglyURLs = false
     # 菜单栏
     fontFamilyMenu = "Ma Shan Zheng"
     # 文章标题、文章副标题、列表标题、列表的年份和月份标题、相关文章标题、文章上下篇标题、表格的表头、定义列表中的术语
-    fontFamilyTitle = "'Ma Shan Zheng', 'Noto Sans SC', Mukta"
+    fontFamilyTitle = "'Long Cang', 'Noto Sans SC', Mukta"
     # 分节标题、目录标题
     fontFamilyHeadings = "'Noto+Sans+SC', 'Source Code Pro', Long Cang"
     # 代码、上标、文章元信息、文章更新徽章、文章的 Git 版本信息、极简页脚、不蒜子站点浏览计数
@@ -895,7 +895,7 @@ uglyURLs = false
     fontFamilyBody = "'Noto Sans SC', 'Cinzel Decorative', 'Source Code Pro', 'Long Cang', 'Mukta', Ma Shan Zheng"
 
     # 网络字体链接
-    fontsLink = "https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Long+Cang&family=Ma+Shan+Zheng&family=Noto+Sans+SC&family=Source+Code+Pro&family=Mukta&display=swap"
+    fontsLink = "https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Long+Cang&family=Ma+Shan+Zheng&family=Noto+Sans+SC:wght@400;500;700&family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Mukta&display=swap"
     # 说明：要想读者一定体验到你设置的字体，最好
     #      采用网络字体。MemE 主题目前仅支持
     #      Google Fonts 的链接，请前往
@@ -1190,7 +1190,7 @@ uglyURLs = false
     # 自定义页脚（支持 Markdown）
     customFooter = "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)"
 
-    displayBusuanziSiteUVAndPV = true
+    displayBusuanziSiteUVAndPV = false
     busuanziSiteUVText = "本站访客数"
     busuanziSiteUVIcon = "user"
     busuanziSitePVText = "本站访问量"
