--- a/config.toml
+++ b/config.toml
@@ -1060,10 +1060,10 @@ uglyURLs = false
     # 文章分享
 
     # 是否开启
-    enablePostShare = true
+    enablePostShare = false
 
     # 是否显示（全局设置）
-    displayPostShare = true
+    displayPostShare = false
     # 说明：文章的 Front Matter 中的 `share`
     #      的优先级高于此处
 
@@ -1071,7 +1071,7 @@ uglyURLs = false
 
     shareOnTwitter = true
     shareOnFacebook = true
-#    shareOnLinkedIn = true
+    shareOnLinkedIn = true
     shareOnTelegram = true
     shareOnWeibo = true
     shareOnDouban = true
